<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/albums"
        android:title="@string/Albums"
        app:showAsAction="never"/>
    <item android:id="@+id/artists"
        android:title="@string/Artists"
        app:showAsAction="never"/>
    <item android:id="@+id/collector"
        android:title="@string/Collectors"
        app:showAsAction="never"/>
    <item android:id="@+id/createAlbum"
        android:title="@string/NewAlbum"
        app:showAsAction="never"/>
    <item android:id="@+id/associateTrack"
        android:title="@string/Track"
        app:showAsAction="never"/>
</menu>